# watchdir

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: test.yaml
benches/: benchmark.rs
config_examples/: theme.yaml
src/: cli.rs  inotify.rs  lib.rs  main.rs  path_tree.rs  watcher.rs
tests/: integration_test.rs
