[package]
name = "watchdir"
version = "0.1.0"
authors = ["rydesun <rydesun@gmail.com>"]
license = "MIT"
description = "A tool to watch directories in which files were created"
homepage = "https://github.com/rydesun/watchdir"
repository = "https://github.com/rydesun/watchdir"
keywords = ["cli", "inotify", "linux"]
categories = ["command-line-utilities"]
edition = "2018"
publish = false

[dependencies]
ahash = "0.7"
clap = "=3.0.0-beta.4"
clap_derive = "=3.0.0-beta.4"
clap_generate = "=3.0.0-beta.4"
lazy_static = "1"
libc = "0.2"
mimalloc = "0.1"
snafu = "0.6"
termcolor = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[build-dependencies]
time = "0.3"

[dev-dependencies]
rand = "0.8"
tempfile = "3"

[profile.release]
lto = true
