[package]
name = "watchdir"
version = "0.1.0"
authors = ["rydesun <rydesun@gmail.com>"]
license = "MIT"
description = "A tool to watch directories in which files were created"
homepage = "https://github.com/rydesun/watchdir"
repository = "https://github.com/rydesun/watchdir"
keywords = ["cli", "inotify", "linux"]
categories = ["command-line-utilities"]
edition = "2018"
publish = false

[dependencies]
ahash = "0.7"
async-stream = "0.3"
clap = "=3.0.0-beta.4"
clap_derive = "=3.0.0-beta.4"
clap_generate = "=3.0.0-beta.4"
directories = "4"
futures = "0.3"
lazy_static = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
termcolor = "1.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
walkdir = "2"

[dependencies.tokio]
version = "1.13"
features = ["fs", "macros", "io-util", "sync", "rt-multi-thread", "time"]

[build-dependencies]
time = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
